ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8500a.hs
{-# LANGUAGE TypeFamilies #-}

module T8500a where

class C a where
   type F a
   type F a = [a]
